apps/manifests/example2/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
    kubernetes.io/ingress.class: nginx
  name: ingress
spec:
  rules:
    - host: example2.massfice-premiere.online
      http:
        paths:
          - path: /
            backend:
              service:
                name: todo-example
                port:
                  number: 80
            pathType: Prefix
  tls:
    - hosts:
        - example2.massfice-premiere.online
      secretName: ingress-tls
